--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,6 @@
   display: none;
 }
 
-/* line 1, ../scss/_footer.scss */
-.footer {
-  text-align: center;
-}
-
 /* line 1, ../scss/_intro.scss */
 .intro {
   display: -webkit-flex;
@@ -59,4 +54,30 @@
 /* line 21, ../scss/_intro.scss */
 .intro_techListItem + .intro_techListItem {
   margin-left: 40px;
+}
+
+/* line 1, ../scss/_work.scss */
+.work {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  background: mintcream;
+  height: 100vh;
+}
+
+/* line 10, ../scss/_work.scss */
+.work_projectList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  list-style: none;
+}
+
+/* line 1, ../scss/_footer.scss */
+.footer {
+  text-align: center;
 }
