--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 @import 'compass/css3';
 
 @import 'variables';
+@import 'global';
 
 @import 'header';
 @import 'nav';
@@ -8,5 +9,6 @@
 @import 'intro';
 @import 'work';
 @import 'about';
+@import 'contact';
 
 @import 'footer';
