style(nav): establish basic layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,13 @@
 /* line 5, ../scss/_nav.scss */
 .nav_list {
   display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  background: orangered;
 }
 
 /* line 1, ../scss/_intro.scss */
