--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -4,4 +4,11 @@
 
   .nav_list {
     display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    background: orangered;
   }
