--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,8 @@
-$gradient_start: #00BCDE;
-$gradient_end: #10D563;
+$gradientStart: #00BCDE;
+$gradientEnd: #10D563;
 $cta: #FF9D2B;
 
 $gray: #707070;
 
-$sans_primary: 'Work Sans', Helvetica, sans-serif;
-$sans_secondary: 'Open Sans', Helvetica, sans-serif;
+$sansTitle: 'Work Sans', Helvetica, sans-serif;
+$sansBody: 'Open Sans', Helvetica, sans-serif;
