--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,8 +6,8 @@
   @include display-flex;
   @include align-items(center);
   @include justify-content(space-between);
-  background: gold;
-  padding: 20px;
+  @include background-image(linear-gradient(to right, $gradientStart, $gradientEnd));
+  padding: 10px;
 
   z-index: 9999;
 }
