--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,5 +1,13 @@
 .contact {
-  
+  text-align: center;
 }
+
+  .contact_sectionTitle {
+    color: $gray;
+  }
+
+  .contact_instructions {
+    color: $gray;
+  }
 
   
