--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,3 +7,5 @@ $ltGray: lighten($gray, 50);
 
 $sansTitle: 'Work Sans', Helvetica, sans-serif;
 $sansBody: 'Open Sans', Helvetica, sans-serif;
+
+$navHt: 50px;
