--- a/scss/_workDetail.scss
+++ b/scss/_workDetail.scss
@@ -1,48 +1,85 @@
-.workDetail-intro {
+.workDetail_intro {
   @include display-flex;
-  @include flex-direction(column);
-  @include justify-content(center);
-  background: dodgerblue;
-  height: 100vh;
-  padding: 40px;
+  @include background-image(linear-gradient(to bottom right, $gradientStart, $gradientEnd));
+  padding-top: $navHt;
 }
 
-.workDetail-roleSection {
-  background: greenyellow;
-  @include display-flex;
-  height: 100vh;
-}
-
-  .workDetail-roleContent {
+  .workDetail_introText {
     @include flex(1);
     @include display-flex;
     @include flex-direction(column);
     @include justify-content(center);
-    background: lavender;
     padding: 40px;
   }
 
-  .workDetail-roleImageWrap {
-    @include flex(2);
+    .workDetail_title {
+      margin: 0;
+
+      color: white;
+    }
+
+    .workDetail_summary {
+      color: white;
+    }
+
+  .workDetail_introImageWrapper {
+    @include flex(1);
     @include display-flex;
-    outline: solid 3px hotpink;
-    height: 100%;
+    @include align-items(flex-end);
   }
 
-.workDetail-slideshowSection {
-  position: relative;
-  background: orchid;
-  @include flex(1);
+    .workDetail_introImage {
+      object-fit: contain;
+    }
+
+.workDetail_roleSection {
   @include display-flex;
 }
 
-  .workDetail-slideshow {
-    position: relative;
+  .workDetail_roleContent {
     @include flex(1);
-    outline: solid 1px blue;
+    @include display-flex;
+    @include flex-direction(column);
+    @include justify-content(center);
+    padding: 40px;
   }
 
-    .workDetail-slideshowItem {
+    .workDetail_roleHeader {
+      margin: 0;
+      border-bottom: solid 5px $gradientStart;
+      border-image: linear-gradient(to right, $gradientStart, $gradientEnd) 30;
+      padding-bottom: 20px;
+
+      color: $gray;
+    }
+
+    .workDetail_roleHeader + .workDetail_roleList {
+      margin-top: 20px;
+    }
+
+    .workDetail_roleItem {
+      color: $gray;
+    }
+
+  .workDetail_roleImageWrap {
+    @include flex(2);
+    @include display-flex;
+    height: 100%;
+  }
+
+.workDetail_slideshowSection {
+  position: relative;
+  @include flex(1);
+  @include display-flex;
+  height: 500px;
+}
+
+  .workDetail_slideshow {
+    position: relative;
+    @include flex(1);
+  }
+
+    .workDetail_slideshowItem {
       position: absolute;
       top: 0;
       bottom: 0;
@@ -51,10 +88,15 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
-      background: yellow;
+
+      opacity: 0;
+
+      &--active {
+        opacity: 1;
+      }
     }
 
-  .workDetail-slideshowBtn {
+  .workDetail_slideshowBtn {
     position: absolute;
     top: 50%;
 
@@ -67,19 +109,38 @@
     }
   }
 
-.workDetail-codeSection {
-  background: tomato;
-}
-.workDetail-codeContent {
+.workDetail_codeSection {
   @include display-flex;
   @include align-items(center);
+  @include justify-content(center);
+  background: $ltGray;
+  padding: 40px;
 }
 
-  .workDetail-codeHeader + .workDetail-codeText {
+  .workDetail_codeHeader {
+    margin: 0;
+    border-right: solid 5px $gradientStart;
+    border-image: linear-gradient(to right, $gradientStart, $gradientEnd) 30;
+    padding-right: 20px;
+    
+    color: $gray;
+  }
+
+  .workDetail_codeText {
+    color: $gray;
+  }
+
+  .workDetail_codeHeader + .workDetail_codeText {
     margin-left: 40px;
   }
 
-.workDetail-backLinkWrap {
+.workDetail_backLinkWrap {
   padding: 40px;
+
   text-align: center;
+}
+
+.workDetail_backLink {
+  color: $gray;
+  text-decoration: none;
 }
