--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,10 +2,6 @@
   box-sizing: border-box;
 }
 
-.section--fullHt {
-  @include display-flex;
-  @include align-items(center);
-  @include justify-content(center);
-  @include flex-direction(column);
-  height: 100vh;
+.noScroll {
+  overflow: hidden;
 }
