--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -3,6 +3,7 @@
 }
 
   .nav_toggle {
+    outline: none;
     border: none;
     background: none;
     padding: 0;
@@ -21,8 +22,11 @@
     font-size: 0px;
   }
 
-  .nav_list {
+  .nav_listWrapper {
     display: none;
+  }
+
+  .nav_list {
     position: fixed;
     top: $navHt;
     bottom: 0;
