--- a/css/styles.css
+++ b/css/styles.css
@@ -420,17 +420,111 @@
 
 /* line 1, ../scss/_contact.scss */
 .contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+}
+
+/* line 8, ../scss/_contact.scss */
+.contact_sectionTitle {
+  margin: 0;
+  color: #707070;
+}
+
+/* line 14, ../scss/_contact.scss */
+.contact_instructions {
+  margin: 0;
+  color: #707070;
+}
+
+/* line 20, ../scss/_contact.scss */
+.contactForm {
+  width: 50%;
+  max-width: 600px;
+}
+
+/* line 25, ../scss/_contact.scss */
+.contactForm_inputWrapper {
+  position: relative;
+}
+/* line 28, ../scss/_contact.scss */
+.contactForm_inputWrapper + .contactForm_inputWrapper {
+  margin-top: 30px;
+}
+
+/* line 33, ../scss/_contact.scss */
+.contactForm_text,
+.contactForm_textarea {
+  position: relative;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: solid 1px #707070;
+  background: transparent;
+  z-index: 1;
+  transition: border 0.1s;
+}
+/* line 46, ../scss/_contact.scss */
+.contactForm_text:focus,
+.contactForm_textarea:focus {
+  border-bottom-color: #00BCDE;
+}
+/* line 50, ../scss/_contact.scss */
+.contactForm_text:focus + .contactForm_label, .contactForm_text:valid + .contactForm_label,
+.contactForm_textarea:focus + .contactForm_label,
+.contactForm_textarea:valid + .contactForm_label {
+  opacity: 0.5;
+  font-size: 10px;
+  transform: translateY(-10px);
+}
+
+/* line 58, ../scss/_contact.scss */
+.contactForm_label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  display: block;
+  color: #707070;
+  transition: 0.1s;
+}
+
+/* line 71, ../scss/_contact.scss */
+.contactForm_submitBtn {
+  display: block;
+  margin: 0 auto;
+}
+
+/* line 76, ../scss/_contact.scss */
+.contactForm_thanks {
   text-align: center;
 }
 
-/* line 5, ../scss/_contact.scss */
-.contact_sectionTitle {
+/* line 80, ../scss/_contact.scss */
+.contactForm_thanksStatus {
+  margin: 0;
+  color: #10D563;
+}
+
+/* line 86, ../scss/_contact.scss */
+.contactForm_thanksMsg {
+  margin: 0;
   color: #707070;
 }
 
-/* line 9, ../scss/_contact.scss */
-.contact_instructions {
-  color: #707070;
+/* line 92, ../scss/_contact.scss */
+.contactForm_thanksStatus + .contactForm_thanksMsg {
+  margin-top: 20px;
+}
+
+/* line 96, ../scss/_contact.scss */
+.contact_sectionTitle + .contact_instructions,
+.contact_instructions + .contactForm,
+.contactForm_inputWrapper + .contactForm_submitBtn,
+.contact_sectionTitle + .contactForm_thanks {
+  margin-top: 40px;
 }
 
 /* line 1, ../scss/_workDetail.scss */
