--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,28 +1,46 @@
 .about {
   background: $ltGray;
-  padding: 40px;
+  padding: 20px;
+
+  @include tablet {
+    padding: 40px;
+  }
 }
 
   .about_sectionTitle {
+    margin: 0;
+
     text-align: center;
     color: $gray;
   }
 
   .about_contentWrapper {
-    @include display-flex;
-    @include align-items(center);
+    @include tablet {
+      @include display-flex;
+    }
+    
+    @include desktop {
+      @include align-items(center);
+    }
   }
 
     .about_imageWrapper {
-      padding: 40px;
+      @include desktop {
+        padding: 40px;
+      }
     }
 
     .about_image {
       @include border-radius(50%);
-      width: 400px;
-      height: 400px;
+      width: 300px;
+      height: 300px;
       object-fit: cover;
       object-position: center;
+
+      @include desktop {
+        width: 400px;
+        height: 400px;
+      }
     }
 
     .about_text {
@@ -43,9 +61,26 @@
 
     .about_text + .about_resumeBtn,
     .about_resumeBtn + .about_socialLinks {
-      margin-top: 30px;
+      margin-top: 20px;
+
+      @include tablet {
+        margin-top: 30px;
+      }
+    }
+
+    .about_sectionTitle + .about_contentWrapper {
+      margin-top: 20px;
+
+      @include tablet {
+        margin-top: 40px;
+      }
     }
 
     .about_imageWrapper + .about_textWrapper {
-      margin-left: 40px;
+      margin-top: 20px;
+
+      @include tablet {
+        margin-top: 0;
+        margin-left: 40px;
+      }
     }
