--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -22,6 +22,8 @@
 
   .intro_techList {
     @include display-flex;
+    @include flex-wrap(wrap);
+    @include justify-content(space-between);
     margin: 0;
     padding: 0;
 
@@ -34,7 +36,9 @@
       opacity: 0.75;
 
       & + & {
-        margin-left: 40px;
+        @include tablet {
+          margin-left: 40px;
+        }
       }
     }
 
