--- a/css/styles.css
+++ b/css/styles.css
@@ -23,47 +23,77 @@ a {
 /* line 6, ../scss/_t.scss */
 .t-title--20b {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 18px;
 }
-/* line 12, ../scss/_t.scss */
+@media all and (min-width: 768px) {
+  /* line 6, ../scss/_t.scss */
+  .t-title--20b {
+    font-size: 20px;
+  }
+}
+/* line 16, ../scss/_t.scss */
 .t-title--30b {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 24px;
 }
-/* line 18, ../scss/_t.scss */
+@media all and (min-width: 768px) {
+  /* line 16, ../scss/_t.scss */
+  .t-title--30b {
+    font-size: 30px;
+  }
+}
+/* line 26, ../scss/_t.scss */
 .t-title--40l {
   font-weight: 300;
-  font-size: 40px;
+  font-size: 30px;
 }
-/* line 24, ../scss/_t.scss */
+@media all and (min-width: 768px) {
+  /* line 26, ../scss/_t.scss */
+  .t-title--40l {
+    font-size: 40px;
+  }
+}
+/* line 36, ../scss/_t.scss */
 .t-title--60b {
   font-weight: 700;
-  font-size: 60px;
+  font-size: 40px;
+}
+@media all and (min-width: 768px) {
+  /* line 36, ../scss/_t.scss */
+  .t-title--60b {
+    font-size: 60px;
+  }
 }
 
-/* line 31, ../scss/_t.scss */
+/* line 47, ../scss/_t.scss */
 .t-body, .t-body--14l, .t-body--18l, .t-body--24sb {
   font-family: "Open Sans", Helvetica, sans-serif;
   letter-spacing: 0.03em;
   line-height: 1.5;
 }
-/* line 36, ../scss/_t.scss */
+/* line 52, ../scss/_t.scss */
 .t-body--14l {
   font-weight: 300;
   font-size: 14px;
 }
-/* line 42, ../scss/_t.scss */
+/* line 58, ../scss/_t.scss */
 .t-body--18l {
   font-weight: 300;
-  font-size: 18px;
+  font-size: 16px;
 }
-/* line 48, ../scss/_t.scss */
+@media all and (min-width: 768px) {
+  /* line 58, ../scss/_t.scss */
+  .t-body--18l {
+    font-size: 18px;
+  }
+}
+/* line 68, ../scss/_t.scss */
 .t-body--24sb {
   font-weight: 600;
   font-size: 24px;
 }
 
-/* line 55, ../scss/_t.scss */
+/* line 75, ../scss/_t.scss */
 .t-caps {
   text-transform: uppercase;
   letter-spacing: 0.2em;
@@ -228,11 +258,17 @@ a {
   background-image: -moz-linear-gradient(top, #00bcde, #10d563);
   background-image: -webkit-linear-gradient(top, #00bcde, #10d563);
   background-image: linear-gradient(to bottom right, #00bcde, #10d563);
-  padding: 90px 40px 40px 40px;
+  padding: 70px 20px 20px 20px;
   text-align: center;
 }
+@media all and (min-width: 768px) {
+  /* line 1, ../scss/_intro.scss */
+  .intro {
+    padding: 90px 40px 40px 40px;
+  }
+}
 
-/* line 11, ../scss/_intro.scss */
+/* line 15, ../scss/_intro.scss */
 .intro_image {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -243,12 +279,12 @@ a {
   object-position: center;
 }
 
-/* line 19, ../scss/_intro.scss */
+/* line 23, ../scss/_intro.scss */
 .intro_headline {
   color: white;
 }
 
-/* line 23, ../scss/_intro.scss */
+/* line 27, ../scss/_intro.scss */
 .intro_techList {
   display: -webkit-flex;
   display: flex;
@@ -261,25 +297,27 @@ a {
   list-style: none;
 }
 
-/* line 33, ../scss/_intro.scss */
+/* line 37, ../scss/_intro.scss */
 .intro_techListItem {
+  -webkit-flex-basis: calc(100% / 3);
+  flex-basis: calc(100% / 3);
   text-align: center;
   opacity: 0.75;
 }
 @media all and (min-width: 768px) {
-  /* line 38, ../scss/_intro.scss */
+  /* line 43, ../scss/_intro.scss */
   .intro_techListItem + .intro_techListItem {
     margin-left: 40px;
   }
 }
 
-/* line 45, ../scss/_intro.scss */
+/* line 50, ../scss/_intro.scss */
 .intro_techIcon {
   font-size: 30px;
   color: white;
 }
 
-/* line 50, ../scss/_intro.scss */
+/* line 55, ../scss/_intro.scss */
 .intro_techName {
   color: white;
 }
@@ -344,9 +382,15 @@ a {
   justify-content: space-between;
   position: relative;
   background: white;
-  padding: 40px;
+  padding: 30px;
 }
-/* line 49, ../scss/_work.scss */
+@media all and (min-width: 768px) {
+  /* line 41, ../scss/_work.scss */
+  .work_projectListItem {
+    padding: 40px;
+  }
+}
+/* line 53, ../scss/_work.scss */
 .work_projectListItem:before {
   content: '';
   display: block;
@@ -365,35 +409,35 @@ a {
   transition: transform 0.5s;
   z-index: -1;
 }
-/* line 64, ../scss/_work.scss */
+/* line 68, ../scss/_work.scss */
 .work_projectListItem + .work_projectListItem {
   margin-top: 30px;
 }
 @media all and (min-width: 768px) {
-  /* line 64, ../scss/_work.scss */
+  /* line 68, ../scss/_work.scss */
   .work_projectListItem + .work_projectListItem {
     margin-top: 0;
   }
 }
 @media all and (min-width: 1024px) {
-  /* line 64, ../scss/_work.scss */
+  /* line 68, ../scss/_work.scss */
   .work_projectListItem + .work_projectListItem {
     margin-left: 40px;
   }
 }
 
-/* line 78, ../scss/_work.scss */
+/* line 82, ../scss/_work.scss */
 .work_projectTitle {
   margin: 0;
   color: #707070;
 }
 
-/* line 84, ../scss/_work.scss */
+/* line 88, ../scss/_work.scss */
 .work_projectTeaser {
   color: #707070;
 }
 
-/* line 88, ../scss/_work.scss */
+/* line 92, ../scss/_work.scss */
 .work_projectTitle + .work_projectBtn,
 .work_projectTeaser + .work_projectBtn {
   margin-top: 20px;
@@ -418,11 +462,22 @@ a {
   color: #707070;
 }
 
+/* line 17, ../scss/_about.scss */
+.about_contentWrapper {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: center;
+  align-items: center;
+}
 @media all and (min-width: 768px) {
   /* line 17, ../scss/_about.scss */
   .about_contentWrapper {
-    display: -webkit-flex;
-    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
   }
 }
 @media all and (min-width: 1024px) {
@@ -434,13 +489,13 @@ a {
 }
 
 @media all and (min-width: 1024px) {
-  /* line 27, ../scss/_about.scss */
+  /* line 32, ../scss/_about.scss */
   .about_imageWrapper {
     padding: 40px;
   }
 }
 
-/* line 33, ../scss/_about.scss */
+/* line 38, ../scss/_about.scss */
 .about_image {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -451,60 +506,60 @@ a {
   object-position: center;
 }
 @media all and (min-width: 1024px) {
-  /* line 33, ../scss/_about.scss */
+  /* line 38, ../scss/_about.scss */
   .about_image {
     width: 400px;
     height: 400px;
   }
 }
 
-/* line 46, ../scss/_about.scss */
+/* line 51, ../scss/_about.scss */
 .about_text {
   margin: 0;
   max-width: 500px;
   color: #707070;
 }
 
-/* line 53, ../scss/_about.scss */
+/* line 58, ../scss/_about.scss */
 .about_socialLink {
   color: #707070;
   font-size: 36px;
 }
-/* line 57, ../scss/_about.scss */
+/* line 62, ../scss/_about.scss */
 .about_socialLink + .about_socialLink {
   margin-left: 20px;
 }
 
-/* line 62, ../scss/_about.scss */
+/* line 67, ../scss/_about.scss */
 .about_text + .about_resumeBtn,
 .about_resumeBtn + .about_socialLinks {
   margin-top: 20px;
 }
 @media all and (min-width: 768px) {
-  /* line 62, ../scss/_about.scss */
+  /* line 67, ../scss/_about.scss */
   .about_text + .about_resumeBtn,
   .about_resumeBtn + .about_socialLinks {
     margin-top: 30px;
   }
 }
 
-/* line 71, ../scss/_about.scss */
+/* line 76, ../scss/_about.scss */
 .about_sectionTitle + .about_contentWrapper {
   margin-top: 20px;
 }
 @media all and (min-width: 768px) {
-  /* line 71, ../scss/_about.scss */
+  /* line 76, ../scss/_about.scss */
   .about_sectionTitle + .about_contentWrapper {
     margin-top: 40px;
   }
 }
 
-/* line 79, ../scss/_about.scss */
+/* line 84, ../scss/_about.scss */
 .about_imageWrapper + .about_textWrapper {
   margin-top: 20px;
 }
 @media all and (min-width: 768px) {
-  /* line 79, ../scss/_about.scss */
+  /* line 84, ../scss/_about.scss */
   .about_imageWrapper + .about_textWrapper {
     margin-top: 0;
     margin-left: 40px;
