--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -3,9 +3,13 @@
   @include align-items(center);
   @include flex-direction(column);
   @include background-image(linear-gradient(to bottom right, $gradientStart, $gradientEnd));
-  padding: 40px + $navHt 40px 40px 40px;
+  padding: 20px + $navHt 20px 20px 20px;
 
   text-align: center;
+
+  @include tablet {
+    padding: 40px + $navHt 40px 40px 40px;
+  }
 }
 
   .intro_image {
@@ -31,6 +35,7 @@
   }
 
     .intro_techListItem {
+      @include flex-basis(calc(100% / 3));
       text-align: center;
 
       opacity: 0.75;
