--- a/scss/_t.scss
+++ b/scss/_t.scss
@@ -6,25 +6,41 @@
   &--20b {
     @extend .t-title;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
+
+    @include tablet {
+      font-size: 20px;
+    }
   }
 
   &--30b {
     @extend .t-title;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 24px;
+
+    @include tablet {
+      font-size: 30px;
+    }
   }
 
   &--40l {
     @extend .t-title;
     font-weight: 300;
-    font-size: 40px;
+    font-size: 30px;
+
+    @include tablet {
+      font-size: 40px;
+    }
   }
 
   &--60b {
     @extend .t-title;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 40px;
+
+    @include tablet {
+      font-size: 60px;
+    }
   }
 }
 
@@ -42,7 +58,11 @@
   &--18l {
     @extend .t-body;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 16px;
+
+    @include tablet {
+      font-size: 18px;
+    }
   }
 
   &--24sb {
