--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -44,7 +44,11 @@
       @include justify-content(space-between);
       position: relative;
       background: white;
-      padding: 40px;
+      padding: 30px;
+
+      @include tablet {
+        padding: 40px;
+      }
 
       &:before {
         content: '';
